<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Cadastro">

    <!-- Título -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastro"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@android:drawable/sym_def_app_icon"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/foto_de_perfil_do_usu_rio"/>

    <!-- E-mail -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/e_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewAvatar" />

    <!-- Campo de E-mail -->
    <EditText
        android:id="@+id/editTextEmail"
        style="@style/CustomEditTextStyle"
        android:hint="@string/digite_seu_e_mail"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintWidth_max="488dp"
        />

    <!-- Nome -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"/>

    <!-- Campo de Nome -->
    <EditText
        android:id="@+id/editTextNome"
        style="@style/CustomEditTextStyle"
        android:hint="@string/digite_seu_nome"
        android:autofillHints="name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintWidth_max="488dp"
        />

    <!-- Data de Nascimento -->
    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_de_nascimento"
        app:layout_constraintTop_toBottomOf="@id/editTextNome"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"/>

    <!-- Campo de Data de Nascimento -->
    <EditText
        android:id="@+id/editTextDataNascimento"
        style="@style/CustomEditTextStyle"
        android:hint="@string/digite_sua_data_de_nascimento"
        android:inputType="date"
        app:layout_constraintWidth_max="488dp"
        android:autofillHints="dd/mm/aaaa"
        app:layout_constraintTop_toBottomOf="@id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />

    <!-- Senha -->
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        app:layout_constraintTop_toBottomOf="@id/editTextDataNascimento"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"/>

    <!-- Campo de Senha -->
    <EditText
        android:id="@+id/editTextSenha"
        style="@style/CustomEditTextStyle"
        android:hint="@string/digite_sua_senha"
        android:autofillHints="password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/textView8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintWidth_max="488dp"
        />

    <!-- Botão de Cadastro -->
    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="0dp"
        app:layout_constraintWidth_max="320dp"
        android:layout_height="wrap_content"
        android:background="@color/verdeBt"
        android:text="@string/cadastrar"
        app:layout_constraintTop_toBottomOf="@id/editTextSenha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
         />

    <!-- Texto para Login -->
    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/j_tem_conta_sign_in"
        app:layout_constraintTop_toBottomOf="@id/buttonCadastrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>
